--- a/Source/Installer/Product.wxs
+++ b/Source/Installer/Product.wxs
@@ -12,6 +12,19 @@
 
     <Property Id="VEM" Value="yes"/>
 
+    <!-- UI -->
+    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR"/>
+    <UI>
+      <UIRef Id="WixUI_InstallDir"/>
+      <UIRef Id="WixUI_ErrorProgressText"/>
+
+      <!-- Skip License Agreement Dialog -->
+      <Publish Dialog="WelcomeDlg" Control="Next" Event="NewDialog" Value="InstallDirDlg" Order="2">1</Publish>
+      <Publish Dialog="InstallDirDlg" Control="Back" Event="NewDialog" Value="WelcomeDlg" Order="2">1</Publish>
+    </UI>
+    <WixVariable Id="WixUIBannerBmp" Value="Resources\banner.png"/>
+    <WixVariable Id="WixUIDialogBmp" Value="Resources\dialog.png"/>
+
     <Directory Id="TARGETDIR" Name="SourceDir">
       <!-- Program Files -->
       <Directory Id="ProgramFilesFolder">
