Reconfigure language contents of en and ja-JP

--- a/Source/Wifinian/Views/MainWindow.xaml
+++ b/Source/Wifinian/Views/MainWindow.xaml
@@ -53,7 +53,7 @@
 					Grid.Column="1"
 					x:Name="RushButton"
 					Style="{StaticResource MenuToggleButtonStyle}"
-					Content="Rush"
+					Content="{x:Static models:LanguageService.Rush}"
 					IsChecked="{Binding RushesRescan.Value, Mode=TwoWay}"/>
 
 				<Button Grid.Column="2"
@@ -79,7 +79,7 @@
 					Grid.Column="4"
 					x:Name="EngageButton"
 					Style="{StaticResource MenuToggleButtonStyle}"
-					Content="Engage"
+					Content="{x:Static models:LanguageService.Engage}"
 					IsChecked="{Binding EngagesPriority.Value, Mode=TwoWay}"/>
 
 				<Button Grid.Column="5"
@@ -104,7 +104,7 @@
 				<controls:SimpleToggleButton
 					Grid.Column="7"
 					Style="{StaticResource MenuToggleButtonStyle}"
-					Content="Organize"
+					Content="{x:Static models:LanguageService.Organize}"
 					IsChecked="{Binding OrganizesPriority.Value, Mode=TwoWay}"/>
 			</Grid>
 
@@ -234,13 +234,13 @@
 											<CheckBox x:Name="AutoConnectCheckBox"
 													  Height="22"
 													  Style="{StaticResource ItemCheckBoxStyle}"
-													  Content="Auto Connect"
+													  Content="{x:Static models:LanguageService.AutoConnect}"
 													  IsChecked="{Binding IsAutoConnectEnabled.Value, Mode=TwoWay}"/>
 
 											<!-- Auto Switch -->
 											<CheckBox Height="22"
 													  Style="{StaticResource ItemCheckBoxStyle}"
-													  Content="Auto Switch"
+													  Content="{x:Static models:LanguageService.AutoSwitch}"
 													  Visibility="{Binding ElementName=AutoConnectCheckBox, Path=IsChecked, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverterKey}}"
 													  IsChecked="{Binding IsAutoSwitchEnabled.Value, Mode=TwoWay}"/>
 										</StackPanel>
@@ -262,7 +262,7 @@
 												Grid.Column="0"
 												Style="{StaticResource IconButtonStyle}"
 												IconData="{StaticResource UpForm}"
-												Content="Up"
+												Content="{x:Static models:LanguageService.Up}"
 												Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.MoveUpCommand, Mode=OneTime}"/>
 
 											<!-- Down -->
@@ -270,7 +270,7 @@
 												Grid.Column="1"
 												Style="{StaticResource IconButtonStyle}"
 												IconData="{StaticResource DownForm}"
-												Content="Down"
+												Content="{x:Static models:LanguageService.Down}"
 												Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.MoveDownCommand, Mode=OneTime}"/>
 
 											<!-- Delete -->
@@ -278,7 +278,7 @@
 												Grid.Column="3"
 												Style="{StaticResource IconButtonStyle}"
 												IconData="{StaticResource DeleteForm}"
-												Content="Delete"
+												Content="{x:Static models:LanguageService.Delete}"
 												IsEnabled="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CanDelete.Value, Mode=OneWay}">
 												<i:Interaction.Triggers>
 													<i:EventTrigger EventName="Click">
@@ -287,7 +287,7 @@
 																				Value="Visible"/>
 														<i:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationHeader, Mode=OneWay}"
 																				PropertyName="Text"
-																				Value="Delete: "/>
+																				Value="{x:Static models:LanguageService.Delete}"/>
 														<i:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationBody, Mode=OneWay}"
 																				PropertyName="Text"
 																				Value="{Binding Name, Mode=OneWay}"/>
@@ -372,7 +372,7 @@
 						<Button Grid.Column="0"
 								x:Name="ConfirmationButton"
 								Style="{StaticResource NormalButtonStyle}"
-								Content="OK">
+								Content="{x:Static models:LanguageService.OK}">
 							<i:Interaction.Triggers>
 								<i:EventTrigger EventName="Click">
 									<i:ChangePropertyAction TargetName="ConfirmationBox"
@@ -385,7 +385,7 @@
 						<!-- Cancel -->
 						<Button Grid.Column="2"
 								Style="{StaticResource NormalButtonStyle}"
-								Content="Cancel">
+								Content="{x:Static models:LanguageService.Cancel}">
 							<i:Interaction.Triggers>
 								<i:EventTrigger EventName="Click">
 									<i:ChangePropertyAction TargetName="ConfirmationBox"
